# suturo_manipulation

./: README.md  dependencies.rosinsall  dependencies.rosinstall  workspace.rosinstall
grasps_object_server/: CMakeLists.txt  package.xml
grasps_object_server/config/: iai_hsr_sim.rviz
grasps_object_server/launch/: spawn_bottle_with_marker.launch  start_sim_giskardpy_rviz_grasps.launch
grasps_object_server/src/: force_checking.py  grasps_object_server.py  grasps_object_server_hsrb.py  gripper_example.py  listener.py  test_client.py  toyota_force.py
grasps_object_server/src/.cache/v/cache/: lastfailed
manipulation_test_marker/: CMakeLists.txt  package.xml
manipulation_test_marker/src/: manipulation_test_marker.py
move_gripper_action_server/: CMakeLists.txt  README.md  package.xml
move_gripper_action_server/action/: MoveGripper.action
move_gripper_action_server/launch/: start_sim_giskardpy_rviz.launch
move_gripper_action_server/src/: move_gripper_server.py  test_client.py
object_state_listener/: CMakeLists.txt  package.xml
object_state_listener/launch/: object_state_listener.launch
object_state_listener/src/: object_state_listener
object_state_listener/test/: test.py
perceive_action_server/: CMakeLists.txt  package.xml
perceive_action_server/launch/: start_sim_giskardpy_rviz.launch
perceive_action_server/src/: perceive_server.py  perceive_server_old.py  perceive_server_without_giskard.py  test_client.py
place_action_server/: CMakeLists.txt  package.xml
place_action_server/launch/: start_sim.launch
place_action_server/src/: add_objects.py  place_server.py  test.py
suturo_manipulation/: CMakeLists.txt  package.xml  setup.py
suturo_manipulation/config/: iai_hsr_sim.rviz  rviz_sim.rviz
suturo_manipulation/launch/: start_manipulation.launch  start_manipulation_closed_loop.launch  start_manipulation_easy.launch  start_manipulation_gazebo.launch  start_manipulation_local.launch  start_manipulation_open_loop.launch
suturo_manipulation/params/: hsr_params.yaml  poses.yaml
suturo_manipulation/scripts/: base_scan_opening_limiter.py  close_server.py  experimental_environment.py  giskard_load_static_objects.py  grasp_object_client.py  grasp_object_server.py  grasps_object_server.py  make_plan_server.py  manipulation_test_marker.py  milestone0_showcase.py  milestone1_showcase.py  move_gripper_server.py  object_state_listener  open_object_server.py  open_server.py  place_object_server.py  place_server.py  take_pose_server.py  upload_env.py
suturo_manipulation/src/srv/: BaseScanLimitation.srv
suturo_manipulation/src/suturo_manipulation/: filtered.csv  gripper.py  manipulator.py  suturo_gripper.py  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/: place_object_hsr.csv  slipped_door_hsr.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_1/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_10/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_11/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_12/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_13/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_14/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_15/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_2/: filtered.csv  pltojuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_3/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_4/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_5/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_6/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_7/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_8/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/ClosedLoop/Test_9/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/MidwayInterruption/: data_range.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/OpenLoop/Test_1/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/OpenLoop/Test_10/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/OpenLoop/Test_11/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/OpenLoop/Test_12/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/DoorOpening/OpenLoop/Test_13/: filtered.csv  plotjuggler.csv  unfiltered.csv
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/Placing/HSR/: velocities
suturo_manipulation/src/suturo_manipulation/ForceTorqueData/hsr_placing/test_1/: unfiltered.csv
take_pose_action_server/: CMakeLists.txt  package.xml
take_pose_action_server/src/: take_pose_server.py  test_client.py
(+500 files in other folders)
