<?xml version="1.0"?>
<package format="2">
  <name>grasps_object_server</name>
  <version>0.0.0</version>
  <description>The grasps_object_server package</description>

  <maintainer email="fabian@todo.todo">fabian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>giskardpy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>manipulation_action_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>giskardpy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>manipulation_action_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>giskardpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>manipulation_action_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
