<?xml version="1.0"?>
<package format="2">
  <name>object_state_listener</name>
  <version>0.0.0</version>
  <description>The object_state_listener package</description>

  <maintainer email="stelter2@uni-bremen.de">Marc Stelter</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>giskardpy</build_depend>
  <build_depend>knowledge_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>giskardpy</build_export_depend>
  <build_export_depend>knowledge_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>giskardpy</exec_depend>
  <exec_depend>knowledge_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
