<?xml version="1.0"?>
<package format="2">
  <name>place_action_server</name>
  <version>0.0.0</version>
  <description>The place_action_server package</description>

  <maintainer email="stelter2@uni-bremen.de">Marc Stelter</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>giskardpy</build_depend>
  <build_depend>manipulation_action_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>giskardpy</build_export_depend>
  <build_export_depend>manipulation_action_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>giskardpy</exec_depend>
  <exec_depend>manipulation_action_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
